# D3-driver-drownsiness-detection

./: CBluetoothCom.cpp  CBluetoothCom.h  CDaemon.cpp  CDaemon.h  CDevCamera.cpp  CDevCamera.h  CDevSensor.cpp  CDevSensor.h  CDevSound.cpp  CDevSound.h  CDrowsinessCam.cpp  CDrowsinessCam.h  CLocalSystem.cpp  CLocalSystem.h  CMakeCache.txt  CMakeLists.txt  C_BluetoothCom.cpp  C_DevSound.cpp  C_DevSound.h  C_LocalSystem.cpp  C_LocalSystem.h  DbConnect.php  Makefile  README.md  S60initD3.sh  cmake_install.cmake  d3.elf  dAcquisition.cpp  dSensor.elf  facev2.cpp  localmain.cpp  registerUser.php  tripData.php
Android Studio Java - D3 APP/: AttemptLogin.java  BluetoothSingleton.java  LoginActivity.java  MainActivity.java  RegisterActivity.java  SharedPrefmanager.java  SplashActivity.java  SyncActivity.java  TransferActivity.java  TripActivity.java  TripData.java  URLs.java  User.java  VolleySingleton.java  receiveBluetooth.java
Database/: D3_database.sql
Database/includes/: Constants.php  DbOperations.php
Database/v1/: userLogin.php
DevDriver/DDled/: Makefile  led.ko  led.mod  led.mod.c  ledmodule.c  ledtest.cpp  ledtest.elf  modules.order  utils.c  utils.h
DevDriver/DDtemp/: DDTemperature.c
SVM/: svm.cpp
inc/: CBluetoothCom.h  CDaemon.h  CDevCamera.h  CDevSensor.h  CDrowsinessCam.h  CLocalSystem.h
init scripts/: S60initD3.sh  blue.sh
src/: CBluetoothCom.cpp  CDaemon.cpp  CDevCamera.cpp  CDevSensor.cpp  CDevSound.cpp  CDrowsinessCam.cpp  CLocalSystem.cpp  dAcquisition.cpp
